--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "next-csrf": "^0.2.1",
     "node": "^20.7.0",
     "node-schedule": "^2.1.1",
-    "puppeteer": "^21.4.1",
+    "puppeteer": "^21.11.0",
     "puppeteer-core": "^21.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -73,7 +73,7 @@
     "@types/cors": "^2.8.15",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.14.201",
-    "@types/node": "20.8.7",
+    "@types/node": "^20.8.7",
     "@types/node-schedule": "^2.1.5",
     "@types/puppeteer": "^7.0.4",
     "@types/react": "18.2.31",
